Formatting overhaul, autoformat on compile, and dependency upgrades